--- a/models/staging/facebook/stg_facebook.yml
+++ b/models/staging/facebook/stg_facebook.yml
@@ -1,5 +1,16 @@
 version: 2
 
+sources:
+  - name: facebook
+    schema: "{{ env_var('DBT_SCHEMA') }}_raw"
+    tables:
+      - name: fb_customers
+      - name: fb_followers
+      - name: fb_mentions
+      - name: fb_products
+      - name: fb_reviews
+      - name: fb_sales
+
 models:
   - name: stg_facebook__customers
     columns:
