chore: Created sample docker compose

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -49,3 +49,5 @@ models:
       +materialized: view
     marts:
       +materialized: table
+      dim_customers:
+        post-hook: "{{ insert_custom_customer() }}"
